System to handle input, filtered to mouse and key only

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -438,34 +438,32 @@
    "source": [
     "#### -- [SYSTEM]--\n",
     "***\n",
+    "- Input\n",
     "- Movement\n",
     "- Render\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import random\n",
     "\n",
-    "class SystemABC(ABC):\n",
-    "    @abstractmethod\n",
-    "    def update(self, cm:ComponentManager):\n",
-    "        \"\"\"Update the system with the given component manager\"\"\"\n",
-    "\n",
-    "# Implement Systems that operate on the components\n",
-    "class InputSystem(SystemABC):\n",
-    "    def update(self, cm :ComponentManager):\n",
-    "        \"\"\"Hmmm... empty stub for SystemABC\"\"\"\n",
-    "        pass\n",
-    "\n",
-    "    def update_with_event(self, cm: ComponentManager, event: pygame.event.Event):\n",
-    "        \"\"\"Update the input component of entities with input\"\"\"\n",
+    "# Handle inputs\n",
+    "class InputSystem():\n",
+    "    def handle_inputs(self, cm: ComponentManager, event: pygame.event.Event):\n",
+    "        \"\"\"Handle input events for entities with an input component\"\"\"\n",
     "        entities = cm.get_entities_with_all_components([Input])\n",
     "        for entity in entities:\n",
     "            print(f'Handling event {event} for entity {entity}')\n",
+    "\n",
+    "# Implement Systems that operate on the components\n",
+    "class SystemABC(ABC):\n",
+    "    @abstractmethod\n",
+    "    def update(self, cm :ComponentManager):\n",
+    "        \"\"\"Update the system with the given component manager\"\"\"\n",
     "\n",
     "class MovementSystem(SystemABC):\n",
     "    def update(self, cm :ComponentManager):\n",
@@ -484,11 +482,6 @@
     "    def __init__(self, screen :pygame.Surface, clock :pygame.time.Clock):\n",
     "        self.screen = screen\n",
     "        self.clock = clock\n",
-    "\n",
-    "    def _fill_background(self):\n",
-    "        rgb_random = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
-    "        # self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
-    "        self.screen.fill(rgb_random)\n",
     "\n",
     "    def update(self, cm :ComponentManager):\n",
     "        self._fill_background()\n",
@@ -511,7 +504,12 @@
     "        # Update the display\n",
     "        pygame.display.update()\n",
     "        # Limit the frame rate\n",
-    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
+    "        self.clock.tick(RENDER_CONTEXT.FPS)\n",
+    "        \n",
+    "    def _fill_background(self):\n",
+    "        rgb_random = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
+    "        # self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
+    "        self.screen.fill(rgb_random)"
    ]
   },
   {
@@ -525,91 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Handling event <Event(32768-ActiveEvent {'gain': 1, 'state': 2})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32785-WindowFocusGained {'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 1, 'state': 1})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32783-WindowEnter {'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (302, 182), 'rel': (-220, 20), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (301, 182), 'rel': (-1, 0), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (300, 182), 'rel': (-1, 0), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (296, 182), 'rel': (-4, 0), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (290, 182), 'rel': (-6, 0), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (281, 178), 'rel': (-9, -4), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (244, 173), 'rel': (-37, -5), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (231, 176), 'rel': (-13, 3), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (192, 238), 'rel': (-39, 62), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (213, 294), 'rel': (21, 56), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (299, 264), 'rel': (86, -30), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (316, 239), 'rel': (17, -25), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (314, 240), 'rel': (-2, 1), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(771-TextInput {'text': 'k', 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(771-TextInput {'text': 'k', 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'j', 'key': 106, 'mod': 0, 'scancode': 13, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(771-TextInput {'text': 'j', 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'j', 'key': 106, 'mod': 0, 'scancode': 13, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'g', 'key': 103, 'mod': 0, 'scancode': 10, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(771-TextInput {'text': 'g', 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'g', 'key': 103, 'mod': 0, 'scancode': 10, 'window': None})> for entity <__main__.Entity object at 0x158c75130>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'j', 'key': 106, 'mod': 0, 'scancode': 13, 'window': None})> for entity <__main__.Entity object at 0x158c75130>\n",
-      "Handling event <Event(771-TextInput {'text': 'j', 'window': None})> for entity <__main__.Entity object at 0x158c75130>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'h', 'key': 104, 'mod': 0, 'scancode': 11, 'window': None})> for entity <__main__.Entity object at 0x158c75250>\n",
-      "Handling event <Event(771-TextInput {'text': 'h', 'window': None})> for entity <__main__.Entity object at 0x158c75250>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(771-TextInput {'text': 'k', 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'h', 'key': 104, 'mod': 0, 'scancode': 11, 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(768-KeyDown {'unicode': 'g', 'key': 103, 'mod': 0, 'scancode': 10, 'window': None})> for entity <__main__.Entity object at 0x158c75220>\n",
-      "Handling event <Event(771-TextInput {'text': 'g', 'window': None})> for entity <__main__.Entity object at 0x158c75220>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'j', 'key': 106, 'mod': 0, 'scancode': 13, 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'g', 'key': 103, 'mod': 0, 'scancode': 10, 'window': None})> for entity <__main__.Entity object at 0x158c75070>\n",
-      "Handling event <Event(769-KeyUp {'unicode': 'k', 'key': 107, 'mod': 0, 'scancode': 14, 'window': None})> for entity <__main__.Entity object at 0x158c75070>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (296, 229), 'rel': (-18, -11), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (255, 157), 'rel': (-41, -72), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c75040>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (238, 119), 'rel': (-17, -38), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c75220>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (217, 88), 'rel': (-21, -31), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c75040>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (166, 34), 'rel': (-51, -54), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (163, 31), 'rel': (-3, -3), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (192, 27), 'rel': (29, -4), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c75340>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (235, 10), 'rel': (43, -17), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (243, 4), 'rel': (8, -6), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (235, 0), 'rel': (-8, -4), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (257, 2), 'rel': (22, 2), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (290, 11), 'rel': (33, 9), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (370, 77), 'rel': (80, 66), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 0, 'state': 1})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32784-WindowLeave {'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 0, 'state': 2})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32786-WindowFocusLost {'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 1, 'state': 2})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32785-WindowFocusGained {'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 1, 'state': 1})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(32783-WindowEnter {'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (88, 94), 'rel': (-282, 17), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (64, 55), 'rel': (-24, -39), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (43, 22), 'rel': (-21, -33), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (39, 17), 'rel': (-4, -5), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (36, 14), 'rel': (-3, -3), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (31, 9), 'rel': (-5, -5), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (26, 2), 'rel': (-5, -7), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (25, 2), 'rel': (-1, 0), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (24, 0), 'rel': (-1, -2), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c751f0>\n",
-      "Handling event <Event(1024-MouseMotion {'pos': (20, 0), 'rel': (-4, -4), 'buttons': (0, 0, 0), 'touch': False, 'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32768-ActiveEvent {'gain': 0, 'state': 1})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32784-WindowLeave {'window': None})> for entity <__main__.Entity object at 0x158c693a0>\n",
-      "Handling event <Event(32787-WindowClose {'window': None})> for entity <__main__.Entity object at 0x158c69e50>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialization\n",
     "context_sys = on_awake()\n",
@@ -632,11 +548,16 @@
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                on_exit()\n",
-    "            if event.type == pygame.KEYUP:\n",
+    "            elif event.type == pygame.KEYUP:\n",
     "                if event.key == pygame.K_ESCAPE:\n",
     "                    on_exit()\n",
-    "            # Update inputs\n",
-    "            input_system.update_with_event(component_manager, event)\n",
+    "            # check if the event a keyboard or mouse event\n",
+    "            if event.type in (\n",
+    "                pygame.KEYDOWN, pygame.KEYUP, \n",
+    "                pygame.MOUSEBUTTONDOWN, pygame.MOUSEBUTTONUP, #pygame.MOUSEMOTION\n",
+    "            ):\n",
+    "                # Update input system\n",
+    "                input_system.handle_inputs(component_manager, event)\n",
     "        # Update positions\n",
     "        movement_system.update(component_manager)\n",
     "        # Update the display\n",
