asteroid and ship rotate, ship keyed off input

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
     "class Input:\n",
     "    def __init__(self):\n",
     "        pass\n",
-    "\n",
+    "    \n",
     "# transforms\n",
     "class Position:\n",
     "    def __init__(self, x, y):\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,8 +394,8 @@
     "SHIP_SIZE = 30\n",
     "ASTEROID_HEALTH = 100\n",
     "ASTEROID_SIZE = 100\n",
-    "ASTEROID_VERTICES = 15\n",
-    "ASTEROID_MAX_SPEED = 5\n",
+    "ASTEROID_VERTICES = 10\n",
+    "ASTEROID_MAX_SPEED = 2\n",
     "\n",
     "def spawn_ship(component_manager: ComponentManager) -> None:\n",
     "    'spawn a ship at the center of the screen'\n",
@@ -426,7 +426,7 @@
     "        random.randint(0, RENDER_CONTEXT.HEIGHT)\n",
     "    )\n",
     "    asteroid_rotation = Rotation(\n",
-    "        random.randint(0, 359)\n",
+    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED)\n",
     "    )\n",
     "    asteroid_velocity = Velocity(\n",
     "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
@@ -440,7 +440,7 @@
     "    asteroid_shape = Shape(asteroid_points)\n",
     "\n",
     "    component_manager.add_component(asteroid, asteroid_position)\n",
-    "    # component_manager.add_component(asteroid, asteroid_rotation)\n",
+    "    component_manager.add_component(asteroid, asteroid_rotation)\n",
     "    component_manager.add_component(asteroid, asteroid_velocity)\n",
     "    component_manager.add_component(asteroid, asteroid_health)\n",
     "    component_manager.add_component(asteroid, asteroid_shape)\n",
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,6 @@
     "        \"\"\"Handle input events for entities with an input component\"\"\"\n",
     "        entities = cm.get_entities_with_all_components([Input, Velocity, Rotation])\n",
     "        for entity in entities:\n",
-    "            # print(f'Handling event {event} for entity {entity}')\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key == pygame.K_UP:\n",
     "                    velocity = cm.get_component(entity, Velocity)\n",
@@ -487,12 +486,13 @@
     "                    velocity.vy = 5\n",
     "                if event.key == pygame.K_RIGHT:\n",
     "                    rotation = cm.get_component(entity, Rotation)\n",
-    "                    rotation.angle = random.randint(0, 359)\n",
+    "                    rotation.angle = (rotation.angle + 5)%360\n",
+    "                elif event.key == pygame.K_LEFT:\n",
+    "                    rotation = cm.get_component(entity, Rotation)\n",
+    "                    rotation.angle = (rotation.angle - 5)%360\n",
     "            elif event.type == pygame.KEYUP:\n",
     "                velocity = cm.get_component(entity, Velocity)\n",
     "                velocity.vy = 0\n",
-    "                rotation = cm.get_component(entity, Rotation)\n",
-    "                rotation.angle = 0\n",
     "\n",
     "# Implement Systems that operate on the components\n",
     "class SystemABC(ABC):\n",
@@ -517,13 +517,14 @@
     "class RotationalSystem(SystemABC):\n",
     "    @staticmethod\n",
     "    def _rotatePoints(points: List[Tuple[float, float]], angle: float) -> List[Tuple[float, float]]:\n",
+    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
     "        angle_rad = math.radians(angle)\n",
     "        rotated_points = []\n",
     "        for point in points:\n",
     "            x, y = point\n",
-    "            x += random.randint(-5, 5)\n",
-    "            y += random.randint(-5, 5)\n",
-    "            rotated_points.append((x, y))\n",
+    "            new_x = x * math.cos(angle_rad) - y * math.sin(angle_rad)\n",
+    "            new_y = x * math.sin(angle_rad) + y * math.cos(angle_rad)\n",
+    "            rotated_points.append((new_x, new_y))\n",
     "        return rotated_points\n",
     "\n",
     "    def update(self, cm: ComponentManager):\n",
@@ -531,7 +532,8 @@
     "        for entity in entities:\n",
     "            rotation = cm.get_component(entity, Rotation)\n",
     "            shape = cm.get_component(entity, Shape)\n",
-    "            shape.points = RotationalSystem._rotatePoints(shape.points, rotation.angle)\n",
+    "            rotated_shape = RotationalSystem._rotatePoints(shape.points, rotation.angle)\n",
+    "            shape.points = rotated_shape\n",
     "\n",
     "class RenderSystem(SystemABC):\n",
     "    def __init__(self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
