print event/fps, add endframe tick system

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "from typing import NamedTuple, Tuple, List, Type, Callable\n",
@@ -117,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +484,17 @@
     "class SystemABC(ABC):\n",
     "    @abstractmethod\n",
     "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
-    "        \"\"\"Update the system with the given component manager\"\"\"\n"
+    "        \"\"\"Update the system with the given component manager\"\"\"\n",
+    "\n",
+    "class EndFrameTickSystem(SystemABC):\n",
+    "    def __init__ (self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
+    "        self.screen = screen\n",
+    "        self.clock = clock\n",
+    "\n",
+    "    def update(self, cm: ComponentManager, **kwargs) -> None:\n",
+    "        \"\"\"limit fps at endframe tick and clear screen\"\"\"\n",
+    "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
+    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
    ]
   },
   {
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,11 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RenderSystem(SystemABC):\n",
+    "class ShapeDrawSystem(SystemABC):\n",
     "    def __init__(self, screen: pygame.Surface, clock: pygame.time.Clock):\n",
     "        \"\"\"Render to surface with given clock\"\"\"\n",
     "        self.screen = screen\n",
@@ -633,12 +634,7 @@
     "                (255, 255, 255),\n",
     "                [(x + px, y + py) for px, py in shape.points],\n",
     "                1,\n",
-    "            )\n",
-    "\n",
-    "        # Update the display\n",
-    "        pygame.display.update()\n",
-    "        # Limit the frame rate\n",
-    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
+    "            )"
    ]
   },
   {
@@ -651,21 +647,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DrawText(SystemABC):\n",
-    "    def __init__ (self, screen: pygame.Surface, position: Tuple[int, int], font_size=30):\n",
+    "class TextBlitSystem(SystemABC):\n",
+    "    def __init__(self, screen: pygame.Surface, position: Tuple[int, int], font_size=24, color = (255, 255, 255)):\n",
     "        \"\"\"Draw text to surface at given position\"\"\"\n",
     "        self.screen = screen\n",
     "        self.position = position\n",
-    "        self.font = pygame.font.SysFont(\"None\", font_size)\n",
+    "        self.font = pygame.font.SysFont(\"none\", font_size)\n",
+    "        self.color = color\n",
     "\n",
-    "    def update(self, cm : ComponentManager):\n",
-    "        pass\n",
-    "    \n",
-    "        "
+    "    def update(self, cm: ComponentManager, message: str, **kwargs) -> None:\n",
+    "        text_surface = self.font.render(message, True, self.color)\n",
+    "        self.screen.blit(text_surface, self.position)"
    ]
   },
   {
@@ -679,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +686,10 @@
     "    input_system = InputSystem()\n",
     "    positioning_system = PositioningSystem()\n",
     "    rotational_system = RotationalSystem()\n",
-    "    render_system = RenderSystem(context_sys.screen, context_sys.clock)\n",
+    "    shape_draw_system = ShapeDrawSystem(context_sys.screen, context_sys.clock)\n",
+    "    text_blit_system_fps = TextBlitSystem(context_sys.screen, (280, 430))\n",
+    "    text_blit_system_event = TextBlitSystem(context_sys.screen, (10, 450), 18)\n",
+    "    end_frame_tick_system = EndFrameTickSystem(context_sys.screen, context_sys.clock)\n",
     "\n",
     "    # Create ship\n",
     "    spawn_ship(component_manager)\n",
@@ -700,10 +699,11 @@
     "    # Main game loop\n",
     "    while True:\n",
     "        try:\n",
-    "            # Set the frame rate\n",
-    "            context_sys.clock.tick(RENDER_CONTEXT.FPS)\n",
     "            # Event Handling\n",
-    "            for event in pygame.event.get():\n",
+    "            frame_events = pygame.event.get()\n",
+    "            if len(frame_events) == 0:\n",
+    "                continue\n",
+    "            for event in frame_events:\n",
     "                if event.type == pygame.QUIT:\n",
     "                    on_exit()\n",
     "                elif event.type == pygame.KEYUP:\n",
@@ -722,8 +722,15 @@
     "            positioning_system.update(component_manager)\n",
     "            # Update rotation\n",
     "            rotational_system.update(component_manager)\n",
-    "            # Update the display\n",
-    "            render_system.update(component_manager)\n",
+    "            # Draw shapes\n",
+    "            shape_draw_system.update(component_manager)\n",
+    "            # Blit text\n",
+    "            text_blit_system_event.update(component_manager, message=f\"Event: {frame_events}\")\n",
+    "            text_blit_system_fps.update(component_manager, message=f\"FPS: {context_sys.clock.get_fps():.2f}\")\n",
+    "            # Update display\n",
+    "            pygame.display.update()\n",
+    "            # End frame tick\n",
+    "            end_frame_tick_system.update(component_manager)\n",
     "\n",
     "        except SystemExit:\n",
     "            break\n",
